Thu Mar  4 12:57:52 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>

        * DAnCE/tools/Convert_Plan/Convert_Plan.cpp:
        * DAnCE/tools/Convert_Plan/Convert_Plan.mpc:
        * DAnCE/tools/Convert_Plan/Convert_Plan_Impl.cpp:

          Re-implemented CDR logic to not use FILE_Connector.

Thu Mar  4 12:54:14 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/tests/VariousTopicsEvent/Base/VTopic_Base.mpc:
        * connectors/dds4ccm/tests/VariousTopicsState/Base/VTopics_Base.mpc:
          Resolved compile issues.

Thu Mar  4 10:39:04 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/examples/Hello/Base/Hello_Base.mpc
        * connectors/dds4ccm/examples/Quoter/Base/Quoter_Base.mpc
        * connectors/dds4ccm/examples/Shapes/Base/Shapes_Base.mpc
        * connectors/dds4ccm/performance-tests/Keyed/Base/Perf_Keyed_Test_Base.mpc
        * connectors/dds4ccm/performance-tests/Latency/Base/Latency_Test_Base.mpc
        * connectors/dds4ccm/tests/CoherentWriter/Base/CoherentWrite_Test_Base.mpc
        * connectors/dds4ccm/tests/CSLDeadline/Base/CSL_DeadlineTest_Base.mpc
        * connectors/dds4ccm/tests/CSLQoS/Base/CSL_QoSTest_Base.mpc
        * connectors/dds4ccm/tests/CSLSampleRejected/Base/CSL_SRTest_Base.mpc
        * connectors/dds4ccm/tests/CSLUnexpStat/Base/CSL_USTest_Base.mpc
        * connectors/dds4ccm/tests/DDSWriterEntity/Base/Writer_Base.mpc
        * connectors/dds4ccm/tests/Event_Connection_Test/Base/Event_Connection_Test_Base.mpc
        * connectors/dds4ccm/tests/FixedSizeStruct/EventConnector/Base/FSS_Event_Base.mpc
        * connectors/dds4ccm/tests/FixedSizeStruct/StateConnector/Base/FSS_State_Base.mpc
        * connectors/dds4ccm/tests/Getter/Base/Getter_Test_Base.mpc
        * connectors/dds4ccm/tests/InstanceHandle/Base/Writer_Base.mpc
        * connectors/dds4ccm/tests/KeyedSamples/Base/Keyed_Test_Base.mpc
        * connectors/dds4ccm/tests/KeyedWriter/Base/Writer_Base.mpc