@@ -1,3 +1,13 @@
+Thu Mar  4 13:02:04 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>
+
+        * DAnCE/tests/CIAO/Components/SimpleConsumer_exec.h:
+        * DAnCE/tests/CIAO/Components/SimpleConsumer_exec.cpp:
+        * DAnCE/tests/CIAO/Components/SimpleProvider_exec.h:
+        * DAnCE/tests/CIAO/Components/SimpleProvider_exec.cpp:
+        * DAnCE/tests/CIAO/Components/SimplePublisher_exec.cpp:
+
+          Improved reporting of error conditions. 
+        
 Thu Mar  4 12:57:52 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>
 
         * DAnCE/tools/Convert_Plan/Convert_Plan.cpp:
